# QuickDesk

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README_zh.md  THIRD_PARTY_LICENSES
.github/workflows/: quickdesk-macos.yml  quickdesk-vdd.yml  quickdesk-windows.yml
QuickDesk/: CMakeLists.txt  Main.qml  main.cpp  qml.qrc
QuickDesk/qml/: Example.qml
QuickDesk/res/: Info_Mac.plist.in  QuickDesk.icns  QuickDesk.rc  res.qrc
SignalingServer/: .env  .env.example  Dockerfile  deploy-build.sh  deploy-offline.sh  deploy-pull.sh  deploy.sh  docker-compose.build.yml  docker-compose.yml  go.mod  go.sum  setup-nginx.sh  start.sh  web_embed.go
WebClient/: index.html  package.json  remote.html  vite.config.js
cmake/: quickdesk-remoting.cmake  rapidocr.cmake
docs/: MCP接入指南.md  mcp-integration.md  signaling-server-deployment.md  信令服务器部署.md
quickdesk-mcp/: Cargo.toml
quickdesk-mcp/.cargo/: config.toml
quickdesk-mcp/src/: main.rs  server.rs  trust.rs  ws_client.rs
quickdesk-skill-host/: Cargo.toml
quickdesk-skill-host/host/: Cargo.toml
quickdesk-skill-host/host/src/: main.rs  mcp_client.rs  skill_registry.rs
quickdesk-virtual-display/: .gitignore  quickdesk-virtual-display.sln
scripts/: build_agent_mac.sh  build_agent_win.bat  build_mcp_mac.sh  build_mcp_win.bat  build_qd_mac.sh  build_qd_win.bat  build_skill_host_mac.sh  build_skill_host_win.bat  build_vdd_win.bat  build_webclient_mac.sh  build_webclient_win.bat  lrelease.bat  lrelease.sh  lupdate.sh  package_qd_mac.sh  package_qd_win.bat  publish_qd_mac.sh  publish_qd_win.bat
(+190 files in other folders)
