[package]
name = "quickdesk-skill-host"
version.workspace = true
edition.workspace = true
description = "QuickDesk host-side skill host — manages skill MCP servers and bridges tool calls"

[[bin]]
name = "quickdesk-skill-host"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
